Switch to Gradle 7.5.1 version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
-apply from: 'config/quality.gradle'
-apply from: 'config/jacoco.gradle'
-apply from: 'config/coveralls.gradle'
+//apply from: 'config/quality.gradle'
+//apply from: 'config/jacoco.gradle'
+//apply from: 'config/coveralls.gradle'
 
 def versionMajor = 1
 def versionMinor = 0
@@ -38,50 +37,15 @@ def getVersionName = { ->
     return name
 }
 
-def getFabricApiKey = { ->
-    def noKey = "0000000000000000000000000000000000000000"
-    def key = project.hasProperty('fabricApiKey') ? fabricApiKey.toString() :
-            System.getenv("FABRIC_API_KEY") ?: noKey
-    if (key == noKey)
-        println "Fabric API key not found"
-    else
-        println "Fabric API key found"
-    return key
-}
-
-def getFabricApiSecret = { ->
-    def secret = project.hasProperty('fabricApiSecret') ? fabricApiSecret.toString() :
-            System.getenv("FABRIC_API_SECRET") ?: ""
-    if (secret.isEmpty())
-        println "Fabric API Secret not found"
-    else
-        println "Fabric API Secret found"
-    return secret
-}
-
-task fabricProperties() {
-    description "Generate fabric.properties file with apiSecret"
-    ant.propertyfile(file: "$projectDir/fabric.properties") {
-        entry(key: "apiSecret", value: getFabricApiSecret())
-    }
-}
-
-preBuild.dependsOn('fabricProperties')
-
 android {
-    compileSdkVersion 25
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 34
     defaultConfig {
         applicationId "com.vgaidarji.cimatters"
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion 24
+        targetSdkVersion 34
         versionCode getVersionCode()
         versionName getVersionName()
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
-        manifestPlaceholders = [
-                fabricApiKey: getFabricApiKey()
-        ]
     }
     buildTypes {
         debug {
@@ -93,8 +57,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     lintOptions {
         checkReleaseBuilds false
@@ -102,21 +66,15 @@ android {
     }
 }
 
-repositories {
-    maven { url 'https://maven.fabric.io/public' }
-}
-
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.0.0'
-    compile 'com.jakewharton:butterknife:5.1.1'
-    compile 'com.android.support:design:25.0.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.5@aar') {
-        transitive = true;
-    }
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-all:2.0.2-beta'
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:25.0.0'
+    implementation 'com.jakewharton:butterknife:5.1.1'
+    implementation 'com.android.support:design:25.0.0'
+    // todo: firebase app distribution
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-all:2.0.2-beta'
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 }
