--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,8 @@
             android:theme="@style/AppTheme"
             android:name=".CiMattersApplication">
 
-        <meta-data
-                android:name="io.fabric.ApiKey"
-                android:value="${fabricApiKey}" />
-
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
