Move from Java to Kotlin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ def getVersionName = { ->
 }
 
 android {
-    compileSdkVersion 34
+    compileSdk 34
     defaultConfig {
         applicationId "com.vgaidarji.cimatters"
         minSdkVersion 24
@@ -58,8 +58,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     lintOptions {
         checkReleaseBuilds false
