--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.jetbrains.kotlin.android'
-//apply from: 'config/quality.gradle'
+apply from: 'config/quality.gradle'
 apply from: 'config/jacoco.gradle'
 //apply from: 'config/coveralls.gradle'
 
