--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.3.0'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.7.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:4.4.1"
+        classpath "com.google.firebase:firebase-appdistribution-gradle:4.2.0"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:2.9.9"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
