--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,20 +13,13 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
     - name: Build
-      env:
-        FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
-        FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
       run: "./gradlew assembleDebug"
     - name: Check
-      env:
-        FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
-        FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
       run: "./gradlew testDebug jacocoTestReport lintDebug buildDashboard"
     - name: Distribute
       env:
-        FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
-        FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
-      run: "./gradlew crashlyticsUploadDistributionDebug"
+        FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_JSON: ${{ secrets.FIREBASE_APP_DISTRIBUTION_SERVICE_ACCOUNT_JSON_B64 }}
+      run: "./gradlew appDistributionUploadDebug"
     - name: Publish Code Coverage
       env:
         COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
@@ -37,9 +30,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Instrumentation Tests
         uses: reactivecircus/android-emulator-runner@v2
-        env:
-          FABRIC_API_KEY: ${{ secrets.FABRIC_API_KEY }}
-          FABRIC_API_SECRET: ${{ secrets.FABRIC_API_SECRET }}
         with:
           api-level: 34
           arch: x86
