--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        kotlin_version = '1.9.21'
+    }
     repositories {
-        jcenter()
-        maven { url 'https://maven.fabric.io/public' }
+        google()
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath 'io.fabric.tools:gradle:1.27.1'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.7.1'
+        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.gms:google-services:4.4.1"
+        classpath "com.google.firebase:firebase-appdistribution-gradle:4.2.0"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:2.9.9"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,27 +25,7 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-    }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
-project.ext {
-    if (project.hasProperty('preDexEnable')) {
-        project.ext.preDexLibs = project.properties['preDexEnable'].equals('true')
-    } else {
-        project.ext.preDexLibs = true
-    }
-}
-subprojects {
-    project.plugins.whenPluginAdded { plugin ->
-        if ("com.android.build.gradle.AppPlugin".equals(plugin.class.name)) {
-            project.android.dexOptions.preDexLibraries = rootProject.ext.preDexLibs
-        } else if ("com.android.build.gradle.LibraryPlugin".equals(plugin.class.name)) {
-            project.android.dexOptions.preDexLibraries = rootProject.ext.preDexLibs
-        }
+        google()
+        mavenCentral()
     }
 }
