--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,6 +4,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - uses: gitboard-io/gitboard-action@main
+      with:
+        username: ${{ secrets.GITBOARD_USERNAME }}
+        key: ${{ secrets.GITBOARD_SECRET_TOKEN }}
     - uses: actions/checkout@v4
     - name: Setup Java
       uses: actions/setup-java@v3
@@ -31,6 +35,10 @@ jobs:
       matrix:
         api-level: [ 34 ]
     steps:
+      - uses: gitboard-io/gitboard-action@main
+        with:
+          username: ${{ secrets.GITBOARD_USERNAME }}
+          key: ${{ secrets.GITBOARD_SECRET_TOKEN }}
       - uses: actions/checkout@v4
       - name: Setup Java
         uses: actions/setup-java@v3
